; ModuleID = '/home/carl/AnghaBench/radare2/libr/anal/p/extr_anal_propeller.c_propeller_op.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/anal/p/extr_anal_propeller.c_propeller_op.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.propeller_cmd = type { i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32 }

@UT64_MAX = common dso_local global i32 0, align 4
@R_ANAL_OP_TYPE_CMP = common dso_local global i32 0, align 4
@R_ANAL_OP_TYPE_ADD = common dso_local global i32 0, align 4
@R_ANAL_OP_TYPE_OR = common dso_local global i32 0, align 4
@R_ANAL_OP_TYPE_ROL = common dso_local global i32 0, align 4
@R_ANAL_OP_TYPE_ROR = common dso_local global i32 0, align 4
@R_ANAL_OP_TYPE_AND = common dso_local global i32 0, align 4
@R_ANAL_OP_TYPE_XOR = common dso_local global i32 0, align 4
@R_ANAL_OP_TYPE_RET = common dso_local global i32 0, align 4
@R_ANAL_OP_TYPE_MOV = common dso_local global i32 0, align 4
@R_ANAL_OP_TYPE_SUB = common dso_local global i32 0, align 4
@R_ANAL_OP_TYPE_CJMP = common dso_local global i32 0, align 4
@R_ANAL_OP_TYPE_UJMP = common dso_local global i32 0, align 4
@R_ANAL_OP_TYPE_UNK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.propeller_cmd*, i32, i32*, i32, i32)* @propeller_op to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @propeller_op(i32* %0, %struct.propeller_cmd* %1, i32 %2, i32* %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca %struct.propeller_cmd*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca %struct.propeller_cmd, align 4
  store i32* %0, i32** %8, align 8
  store %struct.propeller_cmd* %1, %struct.propeller_cmd** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32* %3, i32** %11, align 8
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  %16 = call i32 @memset(%struct.propeller_cmd* %15, i32 0, i32 44)
  %17 = load %struct.propeller_cmd*, %struct.propeller_cmd** %9, align 8
  %18 = call i32 @memset(%struct.propeller_cmd* %17, i32 0, i32 44)
  %19 = load i32*, i32** %11, align 8
  %20 = call i32 @propeller_decode_command(i32* %19, %struct.propeller_cmd* %15)
  %21 = load %struct.propeller_cmd*, %struct.propeller_cmd** %9, align 8
  %22 = getelementptr inbounds %struct.propeller_cmd, %struct.propeller_cmd* %21, i32 0, i32 0
  store i32 %20, i32* %22, align 4
  store i32 %20, i32* %14, align 4
  %23 = load i32, i32* %14, align 4
  %24 = icmp slt i32 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %6
  %26 = load i32, i32* %14, align 4
  store i32 %26, i32* %7, align 4
  br label %127

27:                                               ; preds = %6
  %28 = load i32, i32* %10, align 4
  %29 = load %struct.propeller_cmd*, %struct.propeller_cmd** %9, align 8
  %30 = getelementptr inbounds %struct.propeller_cmd, %struct.propeller_cmd* %29, i32 0, i32 10
  store i32 %28, i32* %30, align 4
  %31 = load i32, i32* @UT64_MAX, align 4
  %32 = load %struct.propeller_cmd*, %struct.propeller_cmd** %9, align 8
  %33 = getelementptr inbounds %struct.propeller_cmd, %struct.propeller_cmd* %32, i32 0, i32 7
  store i32 %31, i32* %33, align 4
  %34 = load %struct.propeller_cmd*, %struct.propeller_cmd** %9, align 8
  %35 = getelementptr inbounds %struct.propeller_cmd, %struct.propeller_cmd* %34, i32 0, i32 8
  store i32 %31, i32* %35, align 4
  %36 = load %struct.propeller_cmd*, %struct.propeller_cmd** %9, align 8
  %37 = getelementptr inbounds %struct.propeller_cmd, %struct.propeller_cmd* %36, i32 0, i32 2
  store i32 -1, i32* %37, align 4
  %38 = load %struct.propeller_cmd*, %struct.propeller_cmd** %9, align 8
  %39 = getelementptr inbounds %struct.propeller_cmd, %struct.propeller_cmd* %38, i32 0, i32 1
  store i32 -1, i32* %39, align 4
  %40 = getelementptr inbounds %struct.propeller_cmd, %struct.propeller_cmd* %15, i32 0, i32 3
  %41 = load i32, i32* %40, align 4
  switch i32 %41, label %121 [
    i32 133, label %42
    i32 132, label %42
    i32 131, label %42
    i32 130, label %42
    i32 158, label %42
    i32 157, label %42
    i32 161, label %46
    i32 159, label %46
    i32 160, label %46
    i32 144, label %50
    i32 143, label %54
    i32 138, label %54
    i32 136, label %54
    i32 142, label %58
    i32 137, label %58
    i32 135, label %58
    i32 145, label %62
    i32 128, label %66
    i32 162, label %70
    i32 151, label %70
    i32 152, label %70
    i32 154, label %70
    i32 153, label %70
    i32 141, label %70
    i32 140, label %70
    i32 139, label %70
    i32 150, label %70
    i32 149, label %70
    i32 148, label %70
    i32 147, label %70
    i32 129, label %70
    i32 146, label %70
    i32 134, label %91
    i32 155, label %95
    i32 156, label %95
  ]

42:                                               ; preds = %27, %27, %27, %27, %27, %27
  %43 = load i32, i32* @R_ANAL_OP_TYPE_CMP, align 4
  %44 = load %struct.propeller_cmd*, %struct.propeller_cmd** %9, align 8
  %45 = getelementptr inbounds %struct.propeller_cmd, %struct.propeller_cmd* %44, i32 0, i32 6
  store i32 %43, i32* %45, align 4
  br label %125

46:                                               ; preds = %27, %27, %27
  %47 = load i32, i32* @R_ANAL_OP_TYPE_ADD, align 4
  %48 = load %struct.propeller_cmd*, %struct.propeller_cmd** %9, align 8
  %49 = getelementptr inbounds %struct.propeller_cmd, %struct.propeller_cmd* %48, i32 0, i32 6
  store i32 %47, i32* %49, align 4
  br label %125

50:                                               ; preds = %27
  %51 = load i32, i32* @R_ANAL_OP_TYPE_OR, align 4
  %52 = load %struct.propeller_cmd*, %struct.propeller_cmd** %9, align 8
  %53 = getelementptr inbounds %struct.propeller_cmd, %struct.propeller_cmd* %52, i32 0, i32 6
  store i32 %51, i32* %53, align 4
  br label %125

54:                                               ; preds = %27, %27, %27
  %55 = load i32, i32* @R_ANAL_OP_TYPE_ROL, align 4
  %56 = load %struct.propeller_cmd*, %struct.propeller_cmd** %9, align 8
  %57 = getelementptr inbounds %struct.propeller_cmd, %struct.propeller_cmd* %56, i32 0, i32 6
  store i32 %55, i32* %57, align 4
  br label %125

58:                                               ; preds = %27, %27, %27
  %59 = load i32, i32* @R_ANAL_OP_TYPE_ROR, align 4
  %60 = load %struct.propeller_cmd*, %struct.propeller_cmd** %9, align 8
  %61 = getelementptr inbounds %struct.propeller_cmd, %struct.propeller_cmd* %60, i32 0, i32 6
  store i32 %59, i32* %61, align 4
  br label %125

62:                                               ; preds = %27
  %63 = load i32, i32* @R_ANAL_OP_TYPE_AND, align 4
  %64 = load %struct.propeller_cmd*, %struct.propeller_cmd** %9, align 8
  %65 = getelementptr inbounds %struct.propeller_cmd, %struct.propeller_cmd* %64, i32 0, i32 6
  store i32 %63, i32* %65, align 4
  br label %125

66:                                               ; preds = %27
  %67 = load i32, i32* @R_ANAL_OP_TYPE_XOR, align 4
  %68 = load %struct.propeller_cmd*, %struct.propeller_cmd** %9, align 8
  %69 = getelementptr inbounds %struct.propeller_cmd, %struct.propeller_cmd* %68, i32 0, i32 6
  store i32 %67, i32* %69, align 4
  br label %125

70:                                               ; preds = %27, %27, %27, %27, %27, %27, %27, %27, %27, %27, %27, %27, %27, %27
  %71 = getelementptr inbounds %struct.propeller_cmd, %struct.propeller_cmd* %15, i32 0, i32 3
  %72 = load i32, i32* %71, align 4
  %73 = icmp eq i32 %72, 150
  br i1 %73, label %74, label %86

74:                                               ; preds = %70
  %75 = getelementptr inbounds %struct.propeller_cmd, %struct.propeller_cmd* %15, i32 0, i32 4
  %76 = load i32, i32* %75, align 4
  %77 = icmp eq i32 %76, 68
  br i1 %77, label %78, label %86

78:                                               ; preds = %74
  %79 = getelementptr inbounds %struct.propeller_cmd, %struct.propeller_cmd* %15, i32 0, i32 5
  %80 = load i32, i32* %79, align 4
  %81 = icmp eq i32 %80, 60
  br i1 %81, label %82, label %86

82:                                               ; preds = %78
  %83 = load i32, i32* @R_ANAL_OP_TYPE_RET, align 4
  %84 = load %struct.propeller_cmd*, %struct.propeller_cmd** %9, align 8
  %85 = getelementptr inbounds %struct.propeller_cmd, %struct.propeller_cmd* %84, i32 0, i32 6
  store i32 %83, i32* %85, align 4
  br label %90

86:                                               ; preds = %78, %74, %70
  %87 = load i32, i32* @R_ANAL_OP_TYPE_MOV, align 4
  %88 = load %struct.propeller_cmd*, %struct.propeller_cmd** %9, align 8
  %89 = getelementptr inbounds %struct.propeller_cmd, %struct.propeller_cmd* %88, i32 0, i32 6
  store i32 %87, i32* %89, align 4
  br label %90

90:                                               ; preds = %86, %82
  br label %125

91:                                               ; preds = %27
  %92 = load i32, i32* @R_ANAL_OP_TYPE_SUB, align 4
  %93 = load %struct.propeller_cmd*, %struct.propeller_cmd** %9, align 8
  %94 = getelementptr inbounds %struct.propeller_cmd, %struct.propeller_cmd* %93, i32 0, i32 6
  store i32 %92, i32* %94, align 4
  br label %125

95:                                               ; preds = %27, %27
  %96 = getelementptr inbounds %struct.propeller_cmd, %struct.propeller_cmd* %15, i32 0, i32 9
  %97 = load i32, i32* %96, align 4
  %98 = icmp eq i32 %97, 0
  br i1 %98, label %99, label %112

99:                                               ; preds = %95
  %100 = load i32, i32* @R_ANAL_OP_TYPE_CJMP, align 4
  %101 = load %struct.propeller_cmd*, %struct.propeller_cmd** %9, align 8
  %102 = getelementptr inbounds %struct.propeller_cmd, %struct.propeller_cmd* %101, i32 0, i32 6
  store i32 %100, i32* %102, align 4
  %103 = getelementptr inbounds %struct.propeller_cmd, %struct.propeller_cmd* %15, i32 0, i32 5
  %104 = load i32, i32* %103, align 4
  %105 = add nsw i32 32, %104
  %106 = load %struct.propeller_cmd*, %struct.propeller_cmd** %9, align 8
  %107 = getelementptr inbounds %struct.propeller_cmd, %struct.propeller_cmd* %106, i32 0, i32 8
  store i32 %105, i32* %107, align 4
  %108 = load i32, i32* %10, align 4
  %109 = add nsw i32 %108, 2
  %110 = load %struct.propeller_cmd*, %struct.propeller_cmd** %9, align 8
  %111 = getelementptr inbounds %struct.propeller_cmd, %struct.propeller_cmd* %110, i32 0, i32 7
  store i32 %109, i32* %111, align 4
  br label %120

112:                                              ; preds = %95
  %113 = load i32, i32* @R_ANAL_OP_TYPE_UJMP, align 4
  %114 = load %struct.propeller_cmd*, %struct.propeller_cmd** %9, align 8
  %115 = getelementptr inbounds %struct.propeller_cmd, %struct.propeller_cmd* %114, i32 0, i32 6
  store i32 %113, i32* %115, align 4
  %116 = load i32, i32* %10, align 4
  %117 = add nsw i32 %116, 2
  %118 = load %struct.propeller_cmd*, %struct.propeller_cmd** %9, align 8
  %119 = getelementptr inbounds %struct.propeller_cmd, %struct.propeller_cmd* %118, i32 0, i32 7
  store i32 %117, i32* %119, align 4
  br label %120

120:                                              ; preds = %112, %99
  br label %125

121:                                              ; preds = %27
  %122 = load i32, i32* @R_ANAL_OP_TYPE_UNK, align 4
  %123 = load %struct.propeller_cmd*, %struct.propeller_cmd** %9, align 8
  %124 = getelementptr inbounds %struct.propeller_cmd, %struct.propeller_cmd* %123, i32 0, i32 6
  store i32 %122, i32* %124, align 4
  br label %125

125:                                              ; preds = %121, %120, %91, %90, %66, %62, %58, %54, %50, %46, %42
  %126 = load i32, i32* %14, align 4
  store i32 %126, i32* %7, align 4
  br label %127

127:                                              ; preds = %125, %25
  %128 = load i32, i32* %7, align 4
  ret i32 %128
}

declare dso_local i32 @memset(%struct.propeller_cmd*, i32, i32) #1

declare dso_local i32 @propeller_decode_command(i32*, %struct.propeller_cmd*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
